crates/keron-lang/tests/corpus/errors/check/or_non_boolean.snap
---
source: crates/keron-lang/tests/harness/mod.rs
assertion_line: 75
---
error: `||` requires `Boolean` operands, found `String` and `Boolean`
  --> 1:18
  |
1 | val x: Boolean = "yes" || false
  |                  ^^^^^^^^^^^^^^
